Attempting to make JDK 14 work with vscode java.